--- a/pages/estilo.css
+++ b/pages/estilo.css
@@ -13,7 +13,7 @@ body{
     gap: 1em;
 }
 nav{
-    width: 600px;
+    width: 100%;
     border-radius: 0.5em;
     background-color: black;
 }
@@ -25,17 +25,18 @@ nav{
     align-items: center;
     gap: 2em;
 }
-.navbar li{
+.navbar li {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 2em;
 }
 .logo img{
     width: 100px;
 }
 .boton{
-    width: 100px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 5em;
@@ -148,7 +149,13 @@ section h2 {
 .boton_consulta{
     padding: 4px;
     margin: 3px;
-    border-radius: 0.5em;
+    border-radius: .5em;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: #043069;
+    color: whitesmoke;
+    cursor: pointer;
     
 }
 .mapas{
@@ -205,4 +212,31 @@ footer{
 }
 #logo-footer img{
     width: 300px;
+}
+/*fin de estilo index*/
+/*inicio estilo página2*/
+.catalogo{
+    margin: 10px;
+    padding: 10px;
+    border-radius: .5em;
+    width: 100%;
+    height: 100%;
+    background-color: #131313;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2em;
+}
+.catalogo ul button{
+    margin-top: 60px;
+    width: 100px;
+    height: 30px;
+    border-radius: .5em;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: #043069;
+    color: whitesmoke;
+    cursor: pointer;
 }
